--- a/elviz/web/elviz.css
+++ b/elviz/web/elviz.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:700);
 
 body {
   background-color: #F8F8F8;
@@ -51,7 +52,12 @@ h1, p {
   margin-left: 40px;
 }
 
-
 .centerText {
   text-align: center;
+ }
+ 
+ .bigMonoText {
+     font-family: 'Ubuntu Mono', monospace;
+     font-size: 4em;
+     line-height: 1em;
  }
