--- a/elviz/web/elviz.css
+++ b/elviz/web/elviz.css
@@ -25,7 +25,7 @@ h1, p {
   height: 400px;
 }
 
-#lyricsInputBox {
+#lyricsInputBox, #shareLink {
   display: block;
   margin-left: auto;
   margin-right: auto;
